Issue #2274: Improving visibility of icons in AgentAppointmentAgendaOverview.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.Agenda.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.Agenda.css
@@ -93,4 +93,8 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
         right: auto;
     }
 
+    .OverviewControl .fa {
+        color: white;
+    }
+
 } /* end @media */
